// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Grouped bar - Horizontal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="grouped-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Grouped bar - Vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="grouped-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard No data 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="simple-sample-no-data"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <div
              className="iot--card--toolbar-date-range-wrapper"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Menu"
                className="iot--card--toolbar-date-range-action bx--overflow-menu"
                onClick={[Function]}
                onClose={[Function]}
                onKeyDown={[Function]}
                open={false}
                tabIndex={0}
                title="Select time range"
              >
                <svg
                  aria-label="Select time range"
                  className="bx--overflow-menu__icon"
                  focusable="false"
                  height={16}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                  />
                  <path
                    d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                  />
                  <path
                    d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                  />
                  <title>
                    Select time range
                  </title>
                </svg>
              </button>
            </div>
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--card--empty-message-wrapper"
            style={
              Object {
                "--card-content-padding": "16px",
              }
            }
          >
            No data for this card.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Simple bar - Horizontal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="simple-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles by city"
          >
            <div
              className="iot--card--title--text"
            >
              Particles by city
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Simple bar - Time series 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="simple-time-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles over 4 days"
          >
            <div
              className="iot--card--title--text"
            >
              Particles over 4 days
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <div
              className="iot--card--toolbar-date-range-wrapper"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Menu"
                className="iot--card--toolbar-date-range-action bx--overflow-menu"
                onClick={[Function]}
                onClose={[Function]}
                onKeyDown={[Function]}
                open={false}
                tabIndex={0}
                title="Select time range"
              >
                <svg
                  aria-label="Select time range"
                  className="bx--overflow-menu__icon"
                  focusable="false"
                  height={16}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                  />
                  <path
                    d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                  />
                  <path
                    d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                  />
                  <title>
                    Select time range
                  </title>
                </svg>
              </button>
            </div>
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Simple bar - Vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="simple-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles by city"
          >
            <div
              className="iot--card--title--text"
            >
              Particles by city
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Stacked bar - Horizontal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="stacked-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Stacked bar - Time series 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="stacked-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles / emissions over 4 days"
          >
            <div
              className="iot--card--title--text"
            >
              Particles / emissions over 4 days
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <div
              className="iot--card--toolbar-date-range-wrapper"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Menu"
                className="iot--card--toolbar-date-range-action bx--overflow-menu"
                onClick={[Function]}
                onClose={[Function]}
                onKeyDown={[Function]}
                open={false}
                tabIndex={0}
                title="Select time range"
              >
                <svg
                  aria-label="Select time range"
                  className="bx--overflow-menu__icon"
                  focusable="false"
                  height={16}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                  />
                  <path
                    d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                  />
                  <path
                    d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                  />
                  <title>
                    Select time range
                  </title>
                </svg>
              </button>
            </div>
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Stacked bar - Time series with categories 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="stacked-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles by city over time"
          >
            <div
              className="iot--card--title--text"
            >
              Particles by city over time
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <div
              className="iot--card--toolbar-date-range-wrapper"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Menu"
                className="iot--card--toolbar-date-range-action bx--overflow-menu"
                onClick={[Function]}
                onClose={[Function]}
                onKeyDown={[Function]}
                open={false}
                tabIndex={0}
                title="Select time range"
              >
                <svg
                  aria-label="Select time range"
                  className="bx--overflow-menu__icon"
                  focusable="false"
                  height={16}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21,30a8,8,0,1,1,8-8A8,8,0,0,1,21,30Zm0-14a6,6,0,1,0,6,6A6,6,0,0,0,21,16Z"
                  />
                  <path
                    d="M22.59 25L20 22.41 20 18 22 18 22 21.59 24 23.59 22.59 25z"
                  />
                  <path
                    d="M28,6a2,2,0,0,0-2-2H22V2H20V4H12V2H10V4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2h4V26H6V6h4V8h2V6h8V8h2V6h4v6h2Z"
                  />
                  <title>
                    Select time range
                  </title>
                </svg>
              </button>
            </div>
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Stacked bar - Vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="stacked-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              title="Expand to fullscreen"
              type="button"
            >
              <svg
                aria-hidden="true"
                aria-label="Expand to fullscreen"
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard isEditable 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="grouped-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container iot--bar-chart-container--editable"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard isExpanded 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="bx--modal is-visible"
      >
        <div
          className="iot--card iot--bar-chart-card iot--card--wrapper"
          data-testid="Card"
          id="grouped-sample"
          role="presentation"
          style={
            Object {
              "--card-default-height": "304px",
              "height": "calc(100% - 50px)",
              "width": "calc(100% - 50px)",
            }
          }
        >
          <div
            className="iot--card--header"
          >
            <span
              className="iot--card--title"
              title="Particles and temperature in cities"
            >
              <div
                className="iot--card--title--text"
              >
                Particles and temperature in cities
              </div>
            </span>
            <div
              className="iot--card--toolbar"
            >
              <button
                className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper bx--btn--icon-only bx--btn bx--btn--ghost"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                title="Close"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Close"
                  className="bx--btn__icon"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            className="iot--card--content iot--card--content--expanded"
            style={
              Object {
                "--card-content-height": "256px",
              }
            }
          >
            <div
              className="iot--bar-chart-container iot--bar-chart-container--expanded"
            >
              <div
                className="chart-holder"
              />
              <div
                className="iot--bar-chart-card--stateful-table iot--table-container bx--data-table-container"
              >
                <section
                  aria-label="data table toolbar"
                  className="bx--table-toolbar"
                >
                  <div
                    className="bx--batch-actions iot--table-batch-actions"
                  >
                    <div
                      className="bx--action-list"
                    >
                      <button
                        className="bx--batch-summary__cancel bx--btn bx--btn--primary"
                        disabled={false}
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        Cancel
                      </button>
                    </div>
                    <div
                      className="bx--batch-summary"
                    >
                      <p
                        className="bx--batch-summary__para"
                      >
                        <span>
                          0 item selected
                        </span>
                      </p>
                    </div>
                  </div>
                  <div
                    className="bx--toolbar-content iot--table-toolbar-content"
                  >
                    <div
                      className="bx--toolbar-action bx--toolbar-search-container-expandable"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      tabIndex="0"
                    >
                      <div
                        aria-labelledby="Table-toolbar-search-search"
                        className="bx--search bx--search--sm table-toolbar-search"
                        role="search"
                      >
                        <svg
                          aria-hidden={true}
                          className="bx--search-magnifier"
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5	C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                          />
                        </svg>
                        <label
                          className="bx--label"
                          htmlFor="Table-toolbar-search"
                          id="Table-toolbar-search-search"
                        >
                          Search
                        </label>
                        <input
                          aria-hidden={true}
                          autoComplete="off"
                          className="bx--search-input"
                          id="Table-toolbar-search"
                          onChange={[Function]}
                          placeholder="Search"
                          role="searchbox"
                          tabIndex="-1"
                          type="text"
                          value=""
                        />
                        <button
                          aria-label="Clear search input"
                          className="bx--search-close bx--search-close--hidden"
                          onClick={[Function]}
                          type="button"
                        >
                          <svg
                            aria-hidden={true}
                            focusable="false"
                            height={16}
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 32 32"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                    <button
                      className="bx--btn--icon-only iot--tooltip-svg-wrapper bx--btn bx--btn--ghost"
                      data-testid="download-button"
                      disabled={false}
                      onClick={[Function]}
                      tabIndex={0}
                      title="Download table content"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="Download table content"
                        className="bx--btn__icon"
                        focusable="false"
                        height={20}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M26 15L24.59 13.59 17 21.17 17 2 15 2 15 21.17 7.41 13.59 6 15 16 25 26 15z"
                        />
                        <path
                          d="M26,24v4H6V24H4v4H4a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2h0V24Z"
                        />
                      </svg>
                    </button>
                    <button
                      className="bx--btn--icon-only iot--tooltip-svg-wrapper bx--btn bx--btn--ghost"
                      data-testid="filter-button"
                      disabled={false}
                      onClick={[Function]}
                      tabIndex={0}
                      title="Filters"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="Filters"
                        className="bx--btn__icon"
                        focusable="false"
                        height={20}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M18,28H14a2,2,0,0,1-2-2V18.41L4.59,11A2,2,0,0,1,4,9.59V6A2,2,0,0,1,6,4H26a2,2,0,0,1,2,2V9.59A2,2,0,0,1,27.41,11L20,18.41V26A2,2,0,0,1,18,28ZM6,6V9.59l8,8V26h4V17.59l8-8V6Z"
                        />
                      </svg>
                    </button>
                  </div>
                </section>
                <div
                  className="addons-iot-table-container"
                >
                  <table
                    className="bx--data-table bx--data-table--no-border"
                    title={null}
                  >
                    <thead
                      onMouseMove={null}
                      onMouseUp={null}
                    >
                      <tr>
                        <th
                          aria-sort="none"
                          className="table-header-label-start iot--table-head--table-header table-header-sortable"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <button
                            align="start"
                            className="table-header-label-start iot--table-head--table-header table-header-sortable bx--table-sort"
                            data-column="city"
                            id="column-city"
                            onClick={[Function]}
                            style={
                              Object {
                                "--table-header-width": "",
                              }
                            }
                          >
                            <span
                              className="bx--table-header-label"
                            >
                              <span
                                className=""
                                title="City"
                              >
                                City
                              </span>
                            </span>
                            <svg
                              aria-label="Sort rows by this header in ascending order"
                              className="bx--table-sort__icon"
                              focusable="false"
                              height={20}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 30 17 30 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-label="Sort rows by this header in ascending order"
                              className="bx--table-sort__icon-unsorted"
                              focusable="false"
                              height={20}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </button>
                        </th>
                        <th
                          aria-sort="none"
                          className="table-header-label-start iot--table-head--table-header table-header-sortable"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <button
                            align="start"
                            className="table-header-label-start iot--table-head--table-header table-header-sortable bx--table-sort"
                            data-column="Particles"
                            id="column-Particles"
                            onClick={[Function]}
                            style={
                              Object {
                                "--table-header-width": "",
                              }
                            }
                          >
                            <span
                              className="bx--table-header-label"
                            >
                              <span
                                className=""
                                title="Particles"
                              >
                                Particles
                              </span>
                            </span>
                            <svg
                              aria-label="Sort rows by this header in ascending order"
                              className="bx--table-sort__icon"
                              focusable="false"
                              height={20}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 30 17 30 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-label="Sort rows by this header in ascending order"
                              className="bx--table-sort__icon-unsorted"
                              focusable="false"
                              height={20}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </button>
                        </th>
                        <th
                          aria-sort="none"
                          className="table-header-label-start iot--table-head--table-header table-header-sortable"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <button
                            align="start"
                            className="table-header-label-start iot--table-head--table-header table-header-sortable bx--table-sort"
                            data-column="Temperature"
                            id="column-Temperature"
                            onClick={[Function]}
                            style={
                              Object {
                                "--table-header-width": "",
                              }
                            }
                          >
                            <span
                              className="bx--table-header-label"
                            >
                              <span
                                className=""
                                title="Temperature"
                              >
                                Temperature
                              </span>
                            </span>
                            <svg
                              aria-label="Sort rows by this header in ascending order"
                              className="bx--table-sort__icon"
                              focusable="false"
                              height={20}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 30 17 30 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-label="Sort rows by this header in ascending order"
                              className="bx--table-sort__icon-unsorted"
                              focusable="false"
                              height={20}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </button>
                        </th>
                        <th
                          aria-sort="none"
                          className="table-header-label-start iot--table-head--table-header table-header-sortable"
                          scope="col"
                          style={
                            Object {
                              "width": undefined,
                            }
                          }
                        >
                          <button
                            align="start"
                            className="table-header-label-start iot--table-head--table-header table-header-sortable bx--table-sort"
                            data-column="Emissions"
                            id="column-Emissions"
                            onClick={[Function]}
                            style={
                              Object {
                                "--table-header-width": "",
                              }
                            }
                          >
                            <span
                              className="bx--table-header-label"
                            >
                              <span
                                className=""
                                title="Emissions"
                              >
                                Emissions
                              </span>
                            </span>
                            <svg
                              aria-label="Sort rows by this header in ascending order"
                              className="bx--table-sort__icon"
                              focusable="false"
                              height={20}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 30 17 30 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-label="Sort rows by this header in ascending order"
                              className="bx--table-sort__icon-unsorted"
                              focusable="false"
                              height={20}
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width={20}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </button>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      aria-live="polite"
                    >
                      <tr
                        className="TableBodyRow__StyledTableRow-sc-103itxu-0 fAdmMh"
                        onClick={[Function]}
                      >
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="city"
                          data-offset={0}
                          id="cell-Table-dataindex-0-city"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title="Amsterdam"
                            >
                              Amsterdam
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Particles"
                          data-offset={0}
                          id="cell-Table-dataindex-0-Particles"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={447}
                            >
                              447
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Temperature"
                          data-offset={0}
                          id="cell-Table-dataindex-0-Temperature"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={44}
                            >
                              44
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Emissions"
                          data-offset={0}
                          id="cell-Table-dataindex-0-Emissions"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={120}
                            >
                              120
                            </span>
                          </span>
                        </td>
                      </tr>
                      <tr
                        className="TableBodyRow__StyledTableRow-sc-103itxu-0 fAdmMh"
                        onClick={[Function]}
                      >
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="city"
                          data-offset={0}
                          id="cell-Table-dataindex-1-city"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title="New York"
                            >
                              New York
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Particles"
                          data-offset={0}
                          id="cell-Table-dataindex-1-Particles"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={528}
                            >
                              528
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Temperature"
                          data-offset={0}
                          id="cell-Table-dataindex-1-Temperature"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={11}
                            >
                              11
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Emissions"
                          data-offset={0}
                          id="cell-Table-dataindex-1-Emissions"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={130}
                            >
                              130
                            </span>
                          </span>
                        </td>
                      </tr>
                      <tr
                        className="TableBodyRow__StyledTableRow-sc-103itxu-0 fAdmMh"
                        onClick={[Function]}
                      >
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="city"
                          data-offset={0}
                          id="cell-Table-dataindex-2-city"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title="Bangkok"
                            >
                              Bangkok
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Particles"
                          data-offset={0}
                          id="cell-Table-dataindex-2-Particles"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={435}
                            >
                              435
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Temperature"
                          data-offset={0}
                          id="cell-Table-dataindex-2-Temperature"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={32}
                            >
                              32
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Emissions"
                          data-offset={0}
                          id="cell-Table-dataindex-2-Emissions"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={30}
                            >
                              30
                            </span>
                          </span>
                        </td>
                      </tr>
                      <tr
                        className="TableBodyRow__StyledTableRow-sc-103itxu-0 fAdmMh"
                        onClick={[Function]}
                      >
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="city"
                          data-offset={0}
                          id="cell-Table-dataindex-3-city"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title="San Francisco"
                            >
                              San Francisco
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Particles"
                          data-offset={0}
                          id="cell-Table-dataindex-3-Particles"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={388}
                            >
                              388
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Temperature"
                          data-offset={0}
                          id="cell-Table-dataindex-3-Temperature"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={120}
                            >
                              120
                            </span>
                          </span>
                        </td>
                        <td
                          align="start"
                          className="data-table-start"
                          data-column="Emissions"
                          data-offset={0}
                          id="cell-Table-dataindex-3-Emissions"
                          offset={0}
                        >
                          <span
                            className="TableBodyRow__StyledNestedSpan-sc-103itxu-5 YBqdC"
                          >
                            <span
                              className=""
                              title={312}
                            >
                              312
                            </span>
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div
                  className="bx--pagination iot--pagination"
                  disabled={false}
                  style={
                    Object {
                      "--pagination-text-display": "flex",
                    }
                  }
                >
                  <div
                    className="bx--pagination__left"
                  >
                    <label
                      className="bx--pagination__text"
                      htmlFor="bx-pagination-select-1"
                      id="bx-pagination-select-1-count-label"
                    >
                      Items per page:
                    </label>
                    <div
                      className="bx--form-item"
                    >
                      <div
                        className="bx--select bx--select--inline bx--select__item-count"
                      >
                        <div
                          className="bx--select-input--inline__wrapper"
                        >
                          <div
                            className="bx--select-input__wrapper"
                            data-invalid={null}
                          >
                            <select
                              className="bx--select-input"
                              id="bx-pagination-select-1"
                              onChange={[Function]}
                              value={10}
                            >
                              <option
                                className="bx--select-option"
                                disabled={false}
                                hidden={false}
                                value={10}
                              >
                                10
                              </option>
                              <option
                                className="bx--select-option"
                                disabled={false}
                                hidden={false}
                                value={20}
                              >
                                20
                              </option>
                              <option
                                className="bx--select-option"
                                disabled={false}
                                hidden={false}
                                value={30}
                              >
                                30
                              </option>
                            </select>
                            <svg
                              aria-hidden={true}
                              className="bx--select__arrow"
                              focusable="false"
                              height={16}
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 16 16"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      className="bx--pagination__text"
                    >
                      1–4 of 4 items
                    </span>
                  </div>
                  <div
                    className="bx--pagination__right"
                  >
                    <div
                      className="bx--form-item"
                    >
                      <div
                        className="bx--select bx--select--inline bx--select__page-number"
                      >
                        <label
                          className="bx--label bx--visually-hidden"
                          htmlFor="bx-pagination-select-1-right"
                        >
                          Page number, of 1 pages
                        </label>
                        <div
                          className="bx--select-input--inline__wrapper"
                        >
                          <div
                            className="bx--select-input__wrapper"
                            data-invalid={null}
                          >
                            <select
                              className="bx--select-input"
                              id="bx-pagination-select-1-right"
                              onChange={[Function]}
                              value={1}
                            >
                              <option
                                className="bx--select-option"
                                disabled={false}
                                hidden={false}
                                value={1}
                              >
                                1
                              </option>
                            </select>
                            <svg
                              aria-hidden={true}
                              className="bx--select__arrow"
                              focusable="false"
                              height={16}
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 16 16"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      className="bx--pagination__text"
                    >
                      1 of 1 pages
                    </span>
                    <button
                      aria-label="Previous page"
                      className="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index"
                      disabled={true}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        aria-hidden={true}
                        focusable="false"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 24L10 16 20 8z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Next page"
                      className="bx--pagination__button bx--pagination__button--forward bx--pagination__button--no-index"
                      disabled={true}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        aria-hidden={true}
                        focusable="false"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 8L22 16 12 24z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
